public interface ImageReader {
    void read(String filename);
}
