public abstract class ImageReaderFactory {
    public abstract ImageReader createReader();
}
